Fix body alignment problem
Improved responsive layout for better mobile support

--- a/style.css
+++ b/style.css
@@ -36,10 +36,10 @@ body {
 
 header {
     height: 150px;
-    width: 100vw;
+    width: 100%;
     align-items: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     background-color: white;
     color: black;
 }
@@ -202,6 +202,7 @@ ul li {
     align-items: center;
     box-shadow: 0 0 1px;
     margin-top: -200px;
+    box-sizing: border-box;
 }
 
 
@@ -502,12 +503,21 @@ footer {
         padding: 30px;
     }
 
-    #lets-do-btn{
+    #lets-do-btn {
         height: 50px;
     }
 
-    .project-contact-message-section p{
+    .project-contact-message-section p {
         width: 80%;
         margin: 20px;
+    }
+
+    #devices-illutration {
+        max-width: 90vw;
+        margin: 80px 0 0 0;
+    }
+
+    .space-header {
+        width: 30vw;
     }
 }
